modules/sandbox/ext/libriscv/examples/webapi/cpp-httplib/modules/gdscript/tests/scripts/analyzer/errors/inferring_with_weak_type_member_variable.gd
var untyped = 1
var inferred := untyped

func test():
	pass
